we do a little refactoring